Fixed line wrap bug with long descriptions. Issue 169

--- a/trunk/gwt-cal/src/main/java/com/bradrydzewski/gwt/calendar/theme/outlook/public/gwt-cal-outlook.css
+++ b/trunk/gwt-cal/src/main/java/com/bradrydzewski/gwt/calendar/theme/outlook/public/gwt-cal-outlook.css
@@ -177,7 +177,7 @@
 .gwt-cal .gwt-appointment .body {
     padding-left: 8px;
     padding-top: 1px;
-    white-space: wrap;
+    white-space: normal;
 }
 
 .gwt-cal .gwt-appointment .footer {
